--- a/accounts-prod.yml
+++ b/accounts-prod.yml
@@ -7,7 +7,7 @@ build:
 contacts:
   message: "Welcome to accounts related prod APIs "
   contactDetails:
-    name: " - Product Owner"
+    name: "Product Owner"
     email: "prod@eazybank.com"
   onCallSupport:
     - (453) 392-4829
